<resources>
    <string name="app_name">TeacherHelper</string>
    <!-- Strings used for fragments for navigation -->
    <string name="subject_details_fragment_label">Subject Details Fragment</string>
    <string name="add_subject_group_dialog_label">Add Subject Group Dialog</string>
    <string name="group_students_fragment_label">Group Students Fragment</string>
    <!-- Headlines and titles -->
    <string name="subject_list_headline">Предметы</string>
    <string name="dialog_delete_group_title">Удалить группу?</string>
    <string name="dialog_student_title">Удалить студента?</string>
    <string name="dialog_delete_attendance_title">Удалить посещаемость?</string>
    <string name="dialog_add_group_title">Добавление группы</string>
    <string name="dialog_add_subject_title">Добавление предмета/дисциплины</string>
    <string name="group_students_headline">Студенты группы %s</string>
    <string name="topic_name_creating_title">Название темы</string>
    <string name="topic_creating_title">Создание темы</string>
    <string name="topic_name_editing_title">Редактирование темы</string>
    <string name="topic_editing_title">Редактирование темы</string>
    <string name="dialog_topic_date_title">Дата</string>
    <string name="dialog_other_topic_types_title">Выбор темы</string>
    <string name="dialog_cancel_topic_title">Отменить тему?</string>
    <string name="dialog_delete_topic_title">Удалить тему?</string>
    <string name="dialog_delete_topic_type_title">Удалить тип?</string>
    <string name="dialog_delete_topic_type_error_title">Невозможно удалить тип</string>
    <string name="subject_groups_title">Группы темы</string>
    <string name="dialog_no_groups_title">Группы отсутствуют</string>
    <string name="dialog_no_not_cancelled_topics_title">Отсутствуют темы</string>
    <string name="dialog_attendance_class_dates_title">Даты занятий</string>
    <string name="dialog_topic_types_title">Типы тем</string>
    <string name="dialog_group_import_title">Импортирование группы</string>
    <string name="dialog_global_topics_title">Глобальные темы</string>
    <string name="dialog_attendance_title">Посещаемость студента</string>
    <string name="dialog_performance_title">Успеваемость студента</string>
    <string name="grade_title">Оценка</string>
    <string name="assessment_title">Оценка</string>
    <string name="progress_title">Прогресс выполнения</string>
    <string name="dialog_topics_deadline_title">Сроки выполнения</string>
    <string name="dialog_new_deadline_title">Срок выполнения</string>
    <string name="dialog_edit_class_date_title">Редактирование даты</string>
    <string name="topic_type_creating_title">Добавление типа тем</string>
    <string name="topic_type_editing_title">Редактирование типа тем</string>
    <string name="group_performance_title">Успеваемость %s группы</string>
    <string name="student_performance_title">Успеваемость студента</string>
    <string name="group_list_title">Список групп</string>
    <string name="global_topics_list_title">Глобальные темы</string>
    <string name="topic_types_list_title">Типы тем</string>
    <string name="dialog_group_cannot_be_deleted_title">Эту группу нельзя удалить</string>
    <string name="dialog_class_time_title">Время проведения занятия</string>
    <string name="dialog_delete_subject_title">Удалить предмет и все связанные с ним темы?</string>
    <!-- Labels -->
    <string name="no_subjects_label">Пусто</string>
    <string name="groups_label">Группы</string>
    <string name="topics_label">Темы занятий</string>
    <string name="cancelled_topic_label">Отменена</string>
    <string name="class_date_label">Проведена %s</string>
    <string name="global_topics_label">Глобальные</string>
    <string name="topic_type_label">Тип темы</string>
    <string name="topic_name_addition_label">Дополнение к наименованию</string>
    <string name="topic_student_performance_label">Успеваемость</string>
    <string name="topic_date_label">Дата</string>
    <string name="topic_associated_deadline_label">Соотв. %s</string>
    <string name="allowed_performance_items_label">Допустимые отметки</string>
    <string name="student_name_abbreviation_label">ФИО</string>
    <string name="topics_taken_into_account_label">Учитываемые темы</string>
    <string name="passed_topics_label">Сданные темы</string>
    <string name="attendance_label">Посещаемость</string>
    <string name="empty_group_label">Список пуст</string>
    <string name="empty_list">Список пуст</string>
    <string name="subheader_navigation">Навигация</string>
    <!-- Menu items -->
    <string name="item_remove">Удалить</string>
    <string name="item_cancel">Отменить</string>
    <string name="item_display_name">Изменить отображение имени</string>
    <string name="item_topic_types">Типы тем</string>
    <string name="item_global_topics">Глобальные темы</string>
    <string name="item_all_groups">Список групп</string>
    <string name="item_import">Импорт из Excel</string>
    <string name="item_export">Экспорт в Excel</string>
    <string name="item_subjects">Предметы</string>
    <string name="item_groups">Группы</string>
    <string name="item_search">Поиск</string>
    <!-- Content description -->
    <string name="cd_remove_groups">Выбор групп для удаления</string>
    <string name="cd_select_items_to_remove">Выбор элементов для удаления</string>
    <string name="cd_search">Поиск</string>
    <string name="cd_remove_global_topics">Выбор глобальных тем для удаления</string>
    <string name="cd_remove_topic_types">Выбор типов тем для удаления</string>
    <string name="cd_stop_action">Прекратить</string>
    <string name="cd_remove">Удалить</string>
    <string name="cd_add_button">Добавить</string>
    <string name="cd_confirm_and_return_group_performance">Завершить установку успеваемости</string>
    <string name="cd_confirm_groups_and_continue">Подтвердить выбор групп</string>
    <!-- Buttons -->
    <string name="confirm_button">Подтвердить</string>
    <string name="cancel_button">Отменить</string>
    <string name="back_button">Назад</string>
    <string name="add_button">Добавить</string>
    <string name="ok_button">ОК</string>
    <string name="next_student_button">Следующий</string>
    <string name="prev_student_button">Предыдущий</string>
    <string name="set_result_grade">Выставить итоговую оценку</string>
    <!-- Errors -->
    <string name="incorrect_student_name_error">Некорректное имя</string>
    <string name="incorrect_subject_name_error">Некорректное название</string>
    <string name="topic_name_not_changed_error">Название не изменилось</string>
    <string name="topic_name_already_exists_error">Такая тема уже есть</string>
    <string name="subject_already_exists_error">Такой предмет уже есть</string>
    <string name="group_number_incorrect">Некорректный номер группы</string>
    <string name="group_number_already_exists">Такая группа уже существует</string>
    <string name="group_import_file_no_file_error">Группа не была выбрана</string>
    <string name="group_import_file_wrong_format_error">Неподдерживаемый тип файла</string>
    <string name="group_import_file_no_students_error">Столбец с ФИО не был найден</string>
    <!-- Hints & info -->
    <string name="topic_name_hint">Название</string>
    <string name="subject_name_hint">Название</string>
    <string name="group_number_hint">Номер</string>
    <string name="import_excel_first_sheet_hint">Номер страницы</string>
    <string name="import_excel_first_column_hint">Номер первого столбца</string>
    <string name="import_excel_column_hint">Номер столбца</string>
    <string name="import_excel_first_row_hint">Номер первой строки</string>
    <string name="group_number_new_hint">Номер группы</string>
    <string name="short_topic_name_hint">Короткое название</string>
    <string name="allow_deadline_info">При установлении, в темах будет возможность добавить срок сдачи</string>
    <string name="global_topics_info">Темы принадлежащие всем предметам</string>
    <string name="student_full_name_hint">Фамилия Имя Отчество</string>
    <string name="global_topic_hint">Поиск глобальных тем</string>
    <string name="topic_type_hint">Поиск типов тем</string>
    <string name="subject_hint">Поиск предмета</string>
    <!-- Action menu buttons & content-->
    <string name="topic_type_lecture">Лекция</string>
    <string name="topic_type_other">Другое</string>
    <string name="topic_name_addition_ordinal">Порядковый номер</string>
    <string name="topic_name_addition_date">Дата</string>
    <string name="topic_performance">Отметки</string>
    <string name="topic_attendance">Посещаемость</string>
    <string name="topic_deadline">Крайний срок</string>
    <string name="topic_class_days">Дни проведения</string>
    <string name="topic_cancel">Отменить тему</string>
    <string name="topic_delete">Удалить тему</string>
    <string name="attendance_absent">Отсутствует</string>
    <string name="attendance_excused">Отсутствует (уваж. причина)</string>
    <string name="attendance_present">Присутствует</string>
    <string name="performance_grade">Оценка</string>
    <string name="performance_grade_0">н/а</string>
    <string name="performance_progress">Прогресс</string>
    <string name="performance_assessment">Зачет</string>
    <string name="grade_not_set">Отсутствует</string>
    <string name="assessment_not_set">Отсутствует</string>
    <string name="deadline_from_existing">Выбрать из существующих</string>
    <string name="deadline_new_date">Выбрать новую дату</string>
    <string name="deadline_remove">Не указывать</string>
    <string name="deadline_not_set">Не выбрано</string>
    <string name="topic_type_deadline_allowed">Срок сдачи</string>
    <string name="class_time_range">%02d:%02d   —   %02d:%02d</string>
    <!-- Body text -->
    <string name="dialog_no_groups_body">Прежде чем добавить успеваемость, для предмета должны быть указаны непустые группы</string>
    <string name="dialog_no_not_cancelled_topics">Прежде чем добавить успеваемость, для предмета должны быть добавлены не отмененные темы</string>
    <string name="dialog_group_cannot_be_deleted_body">Группа связана с некоторыми темами</string>
    <string name="dialog_delete_base_error_topic_type_body">Нельзя удалить базовый тип темы</string>
    <string name="dialog_delete_used_error_topic_type_body">Тип темы используется некоторыми темами</string>
    <string name="class_day_edit_error_message">Невозможно отредактировать дату и время занятия, так как с такой датой и временем уже есть занятие</string>
    <string name="dialog_topic_delete_error">Невозможно удалить тему, чей срок сдачи используется другими темами</string>
    <!-- Performance -->
    <string name="assessment_fail">Незачет</string>
    <string name="assessment_pass">Зачет</string>
    <string name="acceptable_assessment_item">Зачет/незачет</string>
    <string name="acceptable_grade_item">Оценка</string>
    <string name="acceptable_progress_item">Прогресс выполнения</string>
    <string name="acceptable_attendance_item">Посещаемость</string>
    <string name="acceptable_attendance_one_day_item">Одна пара</string>
    <string name="acceptable_attendance_multiple_days_item">Несколько пар</string>
    <string name="topic_progress_fraction">%s из %s</string>
    <!-- Transition names -->
    <string name="transition_topic_name">topic-name-transition</string>
    <string name="transition_topic_details">topic-details-transition</string>
</resources>